@startuml

title __SERIALPLOTTER's Class Diagram__\n

  namespace  {
    class ConnexionStatus {
    }
  }
  

  namespace  {
    class DataVisualizer {
    }
  }
  

  namespace  {
    class GUI_CommPortConfig {
    }
  }
  

  namespace  {
    class GUI_GlobalConfig {
    }
  }
  

  namespace  {
    class GUI_MainWindow {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class PacketListener {
    }
  }
  

  namespace  {
    class RawDataDisplay {
    }
  }
  

  namespace  {
    class Sample {
    }
  }
  

  namespace  {
    enum Status {
    }
  }
  

  ConnexionStatus .up.|> java.lang.Runnable
  ConnexionStatus -up-|> javax.swing.JComponent
  ConnexionStatus o-- Status : status
  DataVisualizer -up-|> javax.swing.JComponent
  GUI_CommPortConfig -up-|> javax.swing.JPanel
  GUI_GlobalConfig -up-|> javax.swing.JFrame
  GUI_MainWindow -up-|> javax.swing.JFrame
  GUI_MainWindow o-- GUI_CommPortConfig : commPortConfig
  GUI_MainWindow o-- ConnexionStatus : connexionStatus
  GUI_MainWindow o-- DataVisualizer : dataVisualizer
  GUI_MainWindow o-- PacketListener : packetListener
  GUI_MainWindow o-- RawDataDisplay : rawDataDisplay
  PacketListener .up.|> com.fazecast.jSerialComm.SerialPortMessageListener
  PacketListener o-- ConnexionStatus : connexionStatus
  RawDataDisplay .up.|> java.lang.Runnable
  RawDataDisplay -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
